# bmdc

./: .bzrignore  .gitignore  .gresource.xml  .travis.yml  BMDC++.cbp  BMDC-Changelog-bzr.txt  BMDC-Changelog.txt  BMDC-Credits.txt  BMDC-Readme.txt  BMDC.geany  BMDC.project  BMDC.tags  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.DCPP.txt  Credits.txt  License.txt  Makefile  Makefile~  README.md  SConstruct  SECURITY.md  TODO  TODO.md  bmdc.appdata.xml  bmdc.gschema  clang.sh  marks.bzr  marks.git  meson.build  meson.build.bak  mingw.sh  snapcraft.yaml  trunk.cbp
.git.bak/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
.git.bak/logs/: HEAD
.git.bak/objects/pack/: pack-83dbe38317ab919ec73644704365e20337eb2a9f.idx  pack-83dbe38317ab919ec73644704365e20337eb2a9f.pack
.github/workflows/: c-cpp.yml  codeql.yml  flatpak-builder.yml
Arch-PKGBUILD/: PKGBUILD
BM/: BM.cbp
ConverterWinEmoticons/: File.cpp  File.h  Makefile  SimpleXML.cpp  SimpleXML.h  SimpleXMLReader.cpp  SimpleXMLReader.h  Streams.h  Text.cpp  Text.h  Util.cpp  Util.hh  main.cpp  typedefs.h
ConverterWinEmots/: File.h  Makefile  SimpleXML.cpp  SimpleXML.h  SimpleXMLReader.cpp  SimpleXMLReader.h  Streams.h  Text.cpp  Util.cpp  Util.hh  convertemot.cpp  typedefs.h
Plugins/LuaPlugin/: LuaPlugin.sln  LuaPlugin.workspace
Plugins/LuaPlugin/LuaPlugin/: CriticalSection.h  LuaExec.h  LuaManager.cpp  LuaManager.h  LuaPlugin-LuaJIT.def  LuaPlugin.cpp  LuaPlugin.def  LuaPlugin.h  LuaPlugin.rc  Plugin.cpp  ScriptInstance.cpp  ScriptInstance.h  Util.cpp  (+6 more)
Plugins/dbus-plugin/: .bzrignore  LICENSE
Plugins/dbus-plugins/: Plugin.c  Plugin.h  freespace.cpp  freespace.h  stdafx.h  version.h
RPM.spec/: pclinuxos_bmdc.spec
data/: CMakeLists.txt  bmdc.desktop  bmdc.desktop.in
dbus-plugins/: Plugin.c  SamplePlugin.workspace  fsusage.c  main.c  stdafx.c  stdafx.h  version.h
dbus-plugins/SamplePlugin/: Plugin.c  Plugin.h  main.c  stdafx.h  version.h
dbus-plugins/include/: PluginDefs.h  Singleton.h
dbus-plugins/projects/: Makefile  SamplePlugin.cbp  SamplePlugin.vcxproj.filters
dcpp/: ADLSearch.cpp  ADLSearch.h  AVManager.cpp  AVManager.h  ActionRaw.h  AdcCommand.cpp  AdcCommand.h  AdcHub.cpp  AdcHub.h  Atomic.h  BMDCUtil.cpp  BMDCUtil.h  BZUtils.cpp  BZUtils.h  BackupManager.cpp  BackupManager.h  BloomFilter.h  BufferedSocket.cpp  BufferedSocket.h  BufferedSocketListener.h  Bundle.cpp  Bundle.h  BundleItem.h  CID.cpp  CID.h  CMakeLists.txt  CalcADLAction.h  ChatMessage.cpp  ChatMessage.h  Client.cpp  Client.h  ClientListener.h  ClientManager.cpp  ClientManager.h  ClientManagerListener.h  ColorSettings.h  CommandQueue.cpp  CommandQueue.h  ConnectionManager.cpp  ConnectionManager.h  (+201 more)
dcpp/po/: cs.po
debian/: README.Debian  README.source  bmdc.dirs  bmdc.menu  changelog  control  copyright  docs  gconf-defaults  install  menu  rules  watch
debian/source/: format  include-binaries
emoticons/: bmicon.xml  readme.txt  ubu.xml
extensions/: README.md
extensions/Scripts/: audacious-now-playing.sh  deadbeaf.sh  df.sh  kaffeine-now-playing.sh  vlc-np.sh  vlc2.py
flatpak/: org.bmdc-team.bmdc.yml
glade/: SConscript  SearchEntry.glade  adlsearch.glade  cmddebug.glade  config.glade  detection.glade  export.glade  favoritehubs.glade  favoriteusers.glade  finishedtransfers.glade  highliting.glade  hub.glade  ignoreeusers.glade  mainwindow.glade  notepad.glade  privatemessage.glade  publichubs.glade  recenthub.glade  resources.rc  search.glade  settingsdialog.glade  sharebrowser.glade  system.glade  transfers.glade  uploadqueue.glade
icons/: CMakeLists.txt  bmdc.xpm
linux/: ADLSearchGUI.cc  ADLSearchGUI.hh  AboutConfig.cc  AboutConfig.hh  AboutConfigFav.cc  AboutConfigFav.hh  CMakeLists.txt  FavoriteHubDialog.cc  FavoriteHubDialog.hh  GuiUtil.hh  IgnoreTempManager.cc  IgnoreTempManager.hh  IntlUtil.hh  PluginApiImpl.cc  SConscript  SearchEntry.cc  SearchEntry.hh  ShellCommand.cc  ShellCommand.hh  Shortcuts.hh  Splash.hh  System.cc  System.hh  UserCommandMenu.cc  UserCommandMenu.hh  UserMenu.hh  WulforUtil.cc  WulforUtil.cc~  WulforUtil.hh  adlsearch.cc  adlsearch.hh  bacon-message-connection.cc  bacon-message-connection.hh  bookentry.cc  bookentry.hh  cmddebug.cc  cmddebug.hh  detectiontab.cc  detectiontab.hh  dialogentry.cc  (+83 more)
miniupnpc/: CMakeLists.txt  SConscript  meson.build  miniupnpcstrings.h  miniwget.c
miniupnpc/.svn/: all-wcprops  entries
natpmp/: CMakeLists.txt  SConscript  getgateway.c  meson.build  natpmp.c  natpmp.h
po/: bmdc.pot  cs.po  de.po  ru.po  sk.po  tr.po
scripts/: antispam.lua  monologue.lua  mytimer.lua  readme.txt  stalker.lua  startup.lua  uptime.lua
settings/: AdvancedConnectionPage.cpp  AdvancedConnectionPage.hh  ApearencePage.cpp  ApearencePage.hh  ChatPage.cpp  ChatPage.hh  ConnectionPage.cpp  ConnectionPage.hh  DownloadToPage.cpp  DownloadToPage.hh  DownloadsPage.cpp  DownloadsPage.hh  ExtraSharePage.cpp  ExtraSharePage.hh  GeneralPage.cpp  GeneralPage.hh  HigDialog.cpp  HigDialog.hh  HiglitingPage.cpp  HiglitingPage.hh  NotifyPage.cpp  NotifyPage.hh  OtherApearencePage.cpp  OtherApearencePage.hh  OutConnectionPage.cpp  OutConnectionPage.hh  PreviewPage.cpp  PreviewPage.hh  QuenePage.cpp  QuenePage.hh  SConscript  SettingsDialog.cpp  SettingsDialog.hh  SettingsPage.hh  SharingPage.cpp  SharingPage.hh  SoundPage.cpp  SoundPage.hh  TabsPage.cpp  TabsPage.hh  (+5 more)
ui/: FavDialog.glade.ui  FavDialog.ui  SConscript  SearchEntry.ui  adlsearch.glade.ui  adlsearch.ui  cmddebug.glade.ui  cmddebug.ui  config.glade.ui  config.ui  detection.glade.ui  downloadqueue.glade.ui  downloadqueue.ui  export.glade.ui  export.ui  favoritehubs.glade.ui  favoritehubs.ui  favoritehubs.ui~  favoriteusers.glade.ui  favoriteusers.ui  finishedtransfers.glade.ui  finishedtransfers.ui  hash.ui  hub.glade.ui  hub.ui  mainwindow.glade.ui  mainwindow.ui  notepad.glade.ui  notepad.ui  privatemessage.glade.ui  privatemessage.ui  publichubs.glade.ui  publichubs.ui  recenthub.glade.ui  recenthub.ui  search.glade.ui  search.ui  searchspy.glade.ui  searchspy.ui  settingsdialog.glade.ui  (+11 more)
(+56 files in other folders)
