natpmp = include_directories('../natpmp')
miniupnpc = include_directories('../miniupnpc')

bmdcpp_sources = files ( [
'AdcCommand.cpp',
'AdcHub.cpp',
'ADLSearch.cpp',
'AVManager.cpp',
'BackupManager.cpp',
'BMDCUtil.cpp',
'BufferedSocket.cpp',
'BZUtils.cpp',
'ChatMessage.cpp',
'CID.cpp',
'Client.cpp',
'ClientManager.cpp',
'CommandQueue.cpp',
'ConnectionManager.cpp',
'ConnectivityManager.cpp',
'CryptoManager.cpp',
'DCPlusPlus.cpp',
'DebugManager.cpp',
'DetectionManager.cpp',
'DirectoryListing.cpp',
'Download.cpp',
'DownloadManager.cpp',
'Encoder.cpp',
'Exception.cpp',
'ExportManager.cpp',
'FakeChecker.cpp',
'FavoriteManager.cpp',
'File.cpp',
'FileReader.cpp',
'FinishedItem.cpp',
'FinishedManager.cpp',
'format.cpp',
'GeoIP.cpp',
'GeoManager.cpp',
'HashBloom.cpp',
'HashManager.cpp',
'HighlightManager.cpp',
'HttpConnection.cpp',
'HttpDownload.cpp',
'HubSettings.cpp',
'LogManager.cpp',
'Mapper.cpp',
'Mapper_MiniUPnPc.cpp',
'Mapper_NATPMP.cpp',
'MappingManager.cpp',
'NmdcHub.cpp',
'QueueItem.cpp',
'QueueManager.cpp',
'RawManager.cpp',
'SearchManager.cpp',
'SearchResult.cpp',
'SettingsManager.cpp',
'SFVReader.cpp',
'ShareManager.cpp',
'SimpleXML.cpp',
'SimpleXMLReader.cpp',
'Socket.cpp',
'SSL.cpp',
'SSLSocket.cpp',
'stdinc.cpp',
'StringMatch.cpp',
'StringTokenizer.cpp',
'TarFile.cpp',
'Text.cpp',
'Thread.cpp',
'ThrottleManager.cpp',
'TigerHash.cpp',
'TimerManager.cpp',
'Transfer.cpp',
'Upload.cpp',
'UploadManager.cpp',
'UserCommand.cpp',
'UserConnection.cpp',
'User.cpp',
'Util.cpp',
'version.cpp',
'ZUtils.cpp',
])
zdep = dependency('zlib', version : '>=1.2.8')
gdep = dependency('glib-2.0')
geoipdep = dependency('libmaxminddb')
libdcpp = static_library('dcpp', sources: bmdcpp_sources,dependencies:[ gdep, geoipdep , zdep] , include_directories : [natpmp , miniupnpc], cpp_args: '-DHAVE_LOCAL_MINIUPNPC -DHAVE_GEOIPLIB')

libdcpp_dependency = declare_dependency(
   include_directories : ['.'],
   link_with : libdcpp,
   sources : bmdcpp_sources)

