
settings_sources = files ( [
'AdvancedConnectionPage.cpp',
'ApearencePage.cpp',
'ChatPage.cpp',
'ConnectionPage.cpp',
'DownloadsPage.cpp',
'DownloadToPage.cpp',
'ExtraSharePage.cpp',
'GeneralPage.cpp',
'HigDialog.cpp',
'HiglitingPage.cpp',
'NotifyPage.cpp',
'OtherApearencePage.cpp',
'OutConnectionPage.cpp',
'PreviewPage.cpp',
'QuenePage.cpp',
'SettingsDialog.cpp',
'SharingPage.cpp',
'SoundPage.cpp',
'TabsPage.cpp',
'WindowPage.cpp'
])
pcre_dep  = dependency('libpcre')
thread_dep = dependency('threads')
gdeps = dependency('glib-2.0')
gtkdep = dependency('gtk4')
openssl = dependency('openssl')
bzipdep = cc.find_library('bz2', required : true)




